Fix the issue that shutdown server on Windows throws exception